--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                   </button>
                 </span>
             </div>
+            <button id="x-file-upload" class="btn btn-primary my-2 my-sm-0" type="submit" style="margin-top: 25px !important; height:50px; width: 200px;"><b> Search</b></button>
         </form>
         <div id="error" class="isa_error"></div>
         </div>
