--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h4><b id="x-result-txt" > </b> </h4>
         </div>
       </div>
-      <hr id="x-hrule" class="mb-4" style="display: none;">
+      <hr id="x-hrule" class="mb-4" style="display: none; display: block; background-color: #209cf4;">
       <!-- Grid -->
       <div id="x-grid-div" class="row justify-content-center mt-4 mx-2">
       </div>
