--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <!-- Heading -->
       <div class="row justify-content-center mt-4">
-        <div class="col">
+        <div class="col" style="color: white">
           <h4><b id="x-result-txt" > </b> </h4>
         </div>
       </div>
